--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.2.3",
         "@babel/preset-react": "^7.0.0",
         "axios": "^0.18",
         "babel-preset-react": "^6.23.0",
@@ -27,6 +28,7 @@
     },
     "dependencies": {
         "dev": "^0.1.3",
+        "moment": "^2.23.0",
         "react-router-dom": "^4.3.1"
     }
 }
