--- a/package.json
+++ b/package.json
@@ -27,8 +27,10 @@
         "sass-loader": "^7.1.0"
     },
     "dependencies": {
+        "chart.js": "^2.7.3",
         "dev": "^0.1.3",
         "moment": "^2.23.0",
+        "react-chartjs-2": "^2.7.4",
         "react-router-dom": "^4.3.1"
     }
 }
