--- a/package.json
+++ b/package.json
@@ -24,7 +24,8 @@
         "react-dom": "^16.2.0",
         "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "webpack-bundle-analyzer": "^3.0.3"
     },
     "dependencies": {
         "chart.js": "^2.7.3",
