--- a/package.json
+++ b/package.json
@@ -31,6 +31,8 @@
         "chart.js": "^2.7.3",
         "dev": "^0.1.3",
         "moment": "^2.23.0",
+        "preact": "^8.4.2",
+        "preact-compat": "^3.18.4",
         "react-chartjs-2": "^2.7.4",
         "react-router-dom": "^4.3.1"
     }
