--- a/package.json
+++ b/package.json
@@ -29,8 +29,8 @@
     },
     "dependencies": {
         "chart.js": "^2.7.3",
+        "date-fns": "^1.30.1",
         "dev": "^0.1.3",
-        "moment": "^2.23.0",
         "preact": "^8.4.2",
         "preact-compat": "^3.18.4",
         "react-chartjs-2": "^2.7.4",
