Remove redis for now

--- a/.env.example
+++ b/.env.example
@@ -4,13 +4,8 @@ APP_KEY=
 APP_DEBUG=true
 APP_URL=
 
-CACHE_DRIVER=redis
-SESSION_DRIVER=redis
-SESSION_LIFETIME=120
-
-REDIS_HOST=127.0.0.1
-REDIS_PASSWORD=null
-REDIS_PORT=6379
+CACHE_DRIVER=file
+SESSION_DRIVER=file
 
 # https://developers.monzo.com/
 MONZO_CLIENT_ID=
