Build JS and css from dockerfile

--- a/.dockerignore
+++ b/.dockerignore
@@ -2,8 +2,8 @@
 .git/
 vendor/
 node_modules/
-#public/js/
-#public/css/
+public/js/
+public/css/
 #public/mix-manifest.json
 storage/framework/cache/**
 storage/framework/sessions/**
