--- a/package.json
+++ b/package.json
@@ -10,30 +10,29 @@
         "production": "cross-env NODE_ENV=production node_modules/webpack/bin/webpack.js --no-progress --hide-modules --config=node_modules/laravel-mix/setup/webpack.config.js"
     },
     "devDependencies": {
-        "@babel/plugin-proposal-class-properties": "^7.2.3",
-        "@babel/preset-react": "^7.0.0",
         "axios": "^0.18",
         "babel-preset-react": "^6.23.0",
-        "bootstrap": "^4.0.0",
-        "cross-env": "^5.1",
-        "jquery": "^3.2",
-        "laravel-mix": "^4.0.7",
-        "lodash": "^4.17.5",
+        "dev": "^0.1.3",
         "popper.js": "^1.12",
         "react": "^16.2.0",
         "react-dom": "^16.2.0",
-        "resolve-url-loader": "^2.3.1",
-        "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
         "webpack-bundle-analyzer": "^3.0.3"
     },
     "dependencies": {
+        "@babel/plugin-proposal-class-properties": "^7.2.3",
+        "@babel/preset-react": "^7.0.0",
+        "laravel-mix": "^4.0.7",
         "chart.js": "^2.7.3",
+        "lodash": "^4.17.5",
         "date-fns": "^1.30.1",
-        "dev": "^0.1.3",
         "preact": "^8.4.2",
         "preact-compat": "^3.18.4",
         "react-chartjs-2": "^2.7.4",
-        "react-router-dom": "^4.3.1"
+        "cross-env": "^5.2.0",
+        "resolve-url-loader": "^2.3.1",
+        "react-router-dom": "^4.3.1",
+        "sass": "^1.15.2",
+        "sass-loader": "^7.1.0",
+        "bootstrap": "^4.0.0"
     }
 }
