Fix bad path, fix perms

--- a/.dockerignore
+++ b/.dockerignore
@@ -1,10 +1,9 @@
-.env
+#.env
 .git/
-vendor/
+#vendor/
 node_modules/
-public/js/
-public/css/
-#public/mix-manifest.json
+#public/js/
+#public/css/
 storage/framework/cache/**
 storage/framework/sessions/**
 storage/framework/views/**
