--- a/package.json
+++ b/package.json
@@ -21,18 +21,19 @@
     "dependencies": {
         "@babel/plugin-proposal-class-properties": "^7.2.3",
         "@babel/preset-react": "^7.0.0",
-        "laravel-mix": "^4.0.7",
+        "bootstrap": "^4.0.0",
         "chart.js": "^2.7.3",
-        "lodash": "^4.17.5",
+        "cross-env": "^5.2.0",
         "date-fns": "^1.30.1",
+        "laravel-mix": "^4.0.7",
+        "lodash": "^4.17.5",
+        "postcss-discard-comments": "^4.0.1",
         "preact": "^8.4.2",
         "preact-compat": "^3.18.4",
         "react-chartjs-2": "^2.7.4",
-        "cross-env": "^5.2.0",
-        "resolve-url-loader": "^2.3.1",
         "react-router-dom": "^4.3.1",
+        "resolve-url-loader": "^2.3.1",
         "sass": "^1.15.2",
-        "sass-loader": "^7.1.0",
-        "bootstrap": "^4.0.0"
+        "sass-loader": "^7.1.0"
     }
 }
