Revert "Don't use named volumes"
This reverts commit d66c9e5fb2d94088b6b6bea7b716ac19c1cc4745.

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,7 +8,7 @@ services:
     ports:
       - "5678:80"
     volumes:
-      - ./:/var/www/html
+      - webroot:/var/www
       - ./nginx/conf.d/:/etc/nginx/conf.d/
     networks:
       - app-network
@@ -21,7 +21,7 @@ services:
     restart: unless-stopped
     tty: true
     volumes:
-      - ./:/var/www/html
+      - webroot:/var/www
       - ./php/local.ini:/usr/local/etc/php/conf.d/local.ini
     networks:
       - app-network
@@ -29,3 +29,6 @@ services:
 networks:
   app-network:
     driver: bridge
+
+volumes:
+  webroot:
