update env example

--- a/.env.example
+++ b/.env.example
@@ -7,6 +7,8 @@ APP_URL=
 CACHE_DRIVER=file
 SESSION_DRIVER=file
 
+LOG_CHANNEL=syslog
+
 # https://developers.monzo.com/
 MONZO_CLIENT_ID=
 MONZO_CLIENT_SECRET=
