Separate monzo and starling in php

--- a/.env.example
+++ b/.env.example
@@ -12,3 +12,7 @@ LOG_CHANNEL=syslog
 # https://developers.monzo.com/
 MONZO_CLIENT_ID=
 MONZO_CLIENT_SECRET=
+
+# https://developer.starlingbank.com/
+STARLING_CLIENT_ID=
+STARLING_CLIENT_SECRET=
