Fix env example and title

--- a/.env.example
+++ b/.env.example
@@ -10,9 +10,11 @@ SESSION_DRIVER=file
 LOG_CHANNEL=syslog
 
 # https://developers.monzo.com/
+MONZO_ENABLED=true
 MONZO_CLIENT_ID=
 MONZO_CLIENT_SECRET=
 
 # https://developer.starlingbank.com/
+STARLING_ENABLED=true
 STARLING_CLIENT_ID=
 STARLING_CLIENT_SECRET=
