--- a/.env.example
+++ b/.env.example
@@ -1,4 +1,4 @@
-APP_NAME=MonzoTFL
+APP_NAME=londoncommuteuk
 APP_ENV=local
 APP_KEY=
 APP_DEBUG=true
@@ -10,11 +10,11 @@ SESSION_DRIVER=file
 LOG_CHANNEL=syslog
 
 # https://developers.monzo.com/
-MONZO_ENABLED=true
+MONZO_ENABLE=true
 MONZO_CLIENT_ID=
 MONZO_CLIENT_SECRET=
 
 # https://developer.starlingbank.com/
-STARLING_ENABLED=true
+STARLING_ENABLE=true
 STARLING_CLIENT_ID=
 STARLING_CLIENT_SECRET=
