--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
         "chart.js": "^2.8.0",
         "cross-env": "^5.2.0",
         "date-fns": "^1.30.1",
+        "dotenv": "^8.0.0",
         "laravel-mix": "^4.0.15",
         "lodash": "^4.17.5",
         "postcss-discard-comments": "^4.0.2",
