--- a/package.json
+++ b/package.json
@@ -35,6 +35,7 @@
         "react-router-dom": "^4.3.1",
         "resolve-url-loader": "^2.3.2",
         "sass": "^1.19.0",
-        "sass-loader": "^7.1.0"
+        "sass-loader": "^7.1.0",
+        "sweetalert2": "^8.10.7"
     }
 }
